--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -83,5 +83,20 @@
     float: right;
     margin-left: 10px;
   }
-  
-  
+  .card {
+    border: 1px solid #ccc;
+    padding: 10px; 
+    margin: 10px; 
+  }
+
+  .card-title {
+    margin-bottom: 5px; 
+  }
+
+  .card-text {
+    margin-bottom: 10px;
+
+  .badge {
+    margin-top: 10px;
+  }
+}
